--- a/Python/Test/first.ipynb
+++ b/Python/Test/first.ipynb
@@ -15,8 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
+    "import pandas as pd"
    ]
   },
   {
@@ -25,32 +24,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sample data creation\n",
-    "np.random.seed(0)  # For reproducibility\n",
-    "\n",
-    "# Creating 'Age' column with values from 25 to 62 and some nulls\n",
-    "age_data = np.random.choice(list(range(25, 63)) + [None], size=50)\n",
-    "\n",
-    "# Creating 'Sex' column with mixed-case values and some nulls\n",
-    "sex_data = np.random.choice(['Male', 'Female', 'Other', 'MALE', 'FEMALE', 'OTHER', None], size=50)"
+    "# Read data from CSV file\n",
+    "df = pd.read_csv('data.csv', na_values=\"None\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creating the DataFrame\n",
-    "df = pd.DataFrame({\n",
-    "    'Age': age_data,\n",
-    "    'Sex': sex_data\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -58,8 +38,8 @@
      "output_type": "stream",
      "text": [
       "Initial Data Types:\n",
-      "Age    object\n",
-      "Sex    object\n",
+      "Age    float64\n",
+      "Sex     object\n",
       "dtype: object\n"
      ]
     }
@@ -72,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,12 +61,12 @@
      "text": [
       "\n",
       "First 5 Rows:\n",
-      "  Age     Sex\n",
-      "0  25    Male\n",
-      "1  28  FEMALE\n",
-      "2  28  Female\n",
-      "3  34  FEMALE\n",
-      "4  44  Female\n"
+      "    Age     Sex\n",
+      "0  29.0  Female\n",
+      "1  32.0    MALE\n",
+      "2  58.0   Other\n",
+      "3  25.0    Male\n",
+      "4  41.0  FEMALE\n"
      ]
     }
    ],
@@ -98,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -107,8 +87,8 @@
      "text": [
       "\n",
       "Null Counts by Column:\n",
-      "Age    2\n",
-      "Sex    5\n",
+      "Age    11\n",
+      "Sex     4\n",
       "dtype: int64\n"
      ]
     }
@@ -121,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -168,11 +148,11 @@
       "\n",
       "First 5 Rows of Cleaned DataFrame:\n",
       "    Age     Sex\n",
-      "0  25.0    male\n",
-      "1  28.0  female\n",
-      "2  28.0  female\n",
-      "3  34.0  female\n",
-      "4  44.0  female\n",
+      "0  29.0  female\n",
+      "1  32.0    male\n",
+      "2  58.0   other\n",
+      "3  25.0    male\n",
+      "4  41.0  female\n",
       "\n",
       "Null Counts by Column After Cleaning:\n",
       "Age    0\n",
